<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFindUs Eye Client</string>
    <string name="title_log">Log</string>
    <string name="title_user">User</string>
    <string name="title_ping">Pings</string>
    <string name="title_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="app_notification_text">The WiFindUs Mesh service is running in the background.</string>
    <string name="app_notification_subtext">Click to return to the app.</string>
    <string name="data_latlong">%1$f°, %2$f°</string>
    <string name="data_node">%1$d (%2$s)</string>
    <string name="data_battery">%1$d%% %2$s</string>
    <string name="signal_strengths_saved_ok">File \'%1$s\' written to SD card.</string>
    <string name="signal_strengths_saved_exception">%1$s thrown writing \'%2$s\' to SD card!</string>
    <string name="signal_strengths_none">No signal strengths have been recorded. Check your wifi settings.</string>
    <string name="export_signal_strengths">Export signal strengths</string>
    <string name="external_storage_unavailable">The external storage volume is currently unavailable.</string>

    <!-- user page -->
    <string name="user_current">Current User</string>
    <string name="user_id">User ID:</string>
    <string name="user_name">Name:</string>
    <string name="user_logout">Sign out</string>
    <string name="user_login">Sign in</string>
    <string name="user_really_logout">Really sign out?</string>
    <string name="user_id_help_text">Enter your User ID:</string>
    <string name="user_no_id">Not signed in.</string>
    <string name="user_login_ok_toast">Successfully signed in as user #%s.</string>
    <string name="user_logout_ok_toast">Successfully signed out.</string>

    <!-- status page -->
    <string name="status_uptime">On since:</string>
    <string name="status_since">Since:</string>
    <string name="status_connected">Connected:</string>
    <string name="status_ip_address">IP Address:</string>
    <string name="status_node">Node:</string>
    <string name="status_node_ip_address">Node IP:</string>
    <string name="status_mesh_network">Mesh Network</string>
    <string name="status_device">Device</string>
    <string name="status_device_id">Device ID:</string>
    <string name="status_location">Location:</string>
    <string name="status_last_cleaned">Update sent:</string>
    <string name="status_battery">Battery:</string>
    <string name="status_server_primary">Server 1:</string>
    <string name="status_server_secondary">Server 2:</string>
    <string name="status_server_web">Web fallback:</string>
    <string name="status_change_server">Change server</string>
    <string name="status_change_server_help_text">Enter server hostname:</string>
    <string name="status_change_server_invalid_format">The provided hostname was improperly formatted.</string>
    <string name="status_change_server_ok">The server hostname was changed successfully.</string>
    <string name="status_change_server_error">There was an error changing the server hostname.</string>
    <string name="status_force_mesh">Force wifi:</string>
    <string name="status_last_location">Located:</string>




    <!-- ping page -->
    <string name="ping_controls">Controls</string>
    <string name="ping_range">Node Range:</string>
    <string name="ping_range_example">Example format: 1,4,7-15</string>
    <string name="ping_results">Results</string>
    <string name="ping_start">Start pinging</string>
    <string name="ping_stop">Stop pinging</string>
    <string name="log_auto_scroll">Automatically scroll log:</string>


</resources>
